# phyx

./: .gitignore  .travis.yml  Makefile  Makefile_bd  Makefile_delta  Makefile_mrca  Makefile_mrca_cut  Makefile_stmap  Makefile_strec  README  README.md  bd_sim.cpp  bd_sim.h  delta.cpp  fasta_reader.cpp  fasta_reader.h  fasta_util.cpp  index.html  main_bd.cpp  main_delta.cpp  main_mrca.cpp  main_mrca_cut.cpp  main_stmap.cpp  main_strec.cpp  node.cpp  node.h  optimize_state_reconstructor.cpp  optimize_state_reconstructor_nlopt.cpp  optimize_state_reconstructor_nlopt.h  params.json  phylip_reader.cpp  rate_model.cpp  rate_model.h  sequence.cpp  sequence.h  state_reconstructor.cpp  state_reconstructor.h  string_node_object.h  tree.cpp  tree.h  (+5 more)
Reviews/: Review1.rtf
cabios-template/: Fig1.eps  Fig1_small_nolines.eps  Fig1_smallred.eps  aa2cdn.eps  clsq.eps  (+31 more)
src/: CodonAligner.cpp  Makefile  Makefile.MAC  Makefile.in  Makefile.in~  Makefile.mrca  Makefile_mrca  Makefile_strec  Makefile_test  Makefile~  PR_draft.md  Phyx_Gui.py  README  RemoveAmbiguous.cpp  RemoveTaxa.cpp  aa2cdn.cpp  aa2cdn.h  aatocdn.cpp  aatocdn.h  aatocodon.cpp  bd_fit.cpp  bd_fit.h  bd_inf.cpp  bd_inf.h  bd_sim.cpp  bd_sim.h  boot.cpp  boot.h  branch_segment.cpp  branch_segment.h  citations.cpp  citations.h  clean_seq.cpp  clean_seq.h  clean_tree.cpp  clean_tree.h  clock.f  clsq.cpp  clsq.d  clsq.h  (+218 more)
src/Examples/PaperExample/: cluster1056.phyx  cluster1061.phyx  cluster1084.phyx  cluster1132.phyx  cluster1208.phyx  cluster1217.phyx  cluster1294.phyx  cluster1347.phyx  cluster1348.phyx  cluster1387.phyx  cluster1400.phyx  cluster1406.phyx  cluster1407.phyx  cluster1414.phyx  cluster1456.phyx  cluster1459.phyx  cluster1461.phyx  cluster1468.phyx  cluster1470.phyx  cluster1479.phyx  cluster1487.phyx  cluster1490.phyx  cluster1507.phyx  cluster1514.phyx  cluster1543.phyx  cluster1553.phyx  cluster1565.phyx  cluster1580.phyx  cluster1581.phyx  cluster1582.phyx  cluster1589.phyx  cluster1600.phyx  cluster1606.phyx  cluster1613.phyx  cluster1632.phyx  cluster1634.phyx  cluster1646.phyx  cluster1651.phyx  cluster1653.phyx  cluster1654.phyx  (+2602 more)
src/TEST/: AA.fa  AA_interleave.NEX  Alignment  Alignment_empty-sites  Binary_5tax.fa  Bollback_2002_MBE.fa  Concat_Sequence1.phy  Concat_Sequence2.fas  Concat_Sequence2.phy  Concatenated.phy  DistMatTest.fa  Full_Mito_Sci_Names.fa  Real_Test.fa  all_possible.trees  bad_alignment.fa  binary_test.tre  clsq.test  clsq_phylip.test  collapse.tre  contrates_file.txt  different_sampling.trees  figtree.tre  kingdoms.newnames.txt  kingdoms.nex.tre  kingdoms.oldnames.txt  kingdoms.tre  linebreak.tre  mrca.txt  mrca_OLD.txt  named_mrca.txt  nat.tre  polytomy.tre  run1.p  run2.p  run2.trees  test.conf  test.data.narrow  test.fa  test.fastq  test.tre  (+16 more)
src/TEST/collapse/: integer_support.tre  prob_support.tre  real_support.tre
src/TEST/morph_data/: morph.NEX  morph.fa  morph.phy  morph_inter.phy
src/TEST/phylip_examples/: interleaved.phy  interleaved2.phy  multiline.phy  simple.phy  spaces.phy  spaces_int.phy  spaces_int2.phy  spaces_ml.phy  spaces_ml2.phy  test_phylip.sh
src/TEST/protein_matrices/: AA_5tax.NEX  AA_5tax.fa  AA_5tax.phy  AA_5tax_interleaved.phy  AA_good.phy  AA_small.NEX
src/man/: citation.h2m  pxaa2cdn.1  pxaa2cdn.1.in  pxbdfit.1  pxbdfit.1.in  pxbdsim.1  pxbdsim.1.in  pxboot.1  pxboot.1.in  pxbp.1.in  pxcat.1.in  pxclsq.1  pxclsq.1.in  pxcltr.1  pxcltr.1.in  pxcolt.1  pxcolt.1.in  pxcomp.1.in  pxconsq.1  pxconsq.1.in  pxcontrates.1  pxcontrates.1.in  pxfqfilt.1  pxfqfilt.1.in  pxlog.1  pxlog.1.in  pxlssq.1  pxlssq.1.in  pxlstr.1  pxlstr.1.in  pxmono.1.in  pxmrca.1  pxmrca.1.in  pxmrcacut.1  pxmrcacut.1.in  pxmrcaname.1  pxmrcaname.1.in  pxnj.1  pxnj.1.in  pxnni.1.in  (+55 more)
src/orphan_files/: delta.cpp  distmatrix.cpp  main.cpp  main_bpseq.cpp  main_contbl.cpp  main_delta.cpp  main_kaks.cpp  main_medusa.cpp  main_seq_test.cpp  main_sm0.cpp  main_sm2a.cpp  main_tdist.cpp  main_test.cpp  mcmc.cpp  mcmc.h  state_reconstructor_simple.cpp  state_reconstructor_simple.h
(+86 files in other folders)
